@startuml
''https://plantuml.com/class-diagram
'
'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection
'
'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList
'
'class ArrayList {
'Object[] elementData
'size()
'}
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}


class Koleksi{
 ~Collection_Id,Title,Penerbit:String
 ~Tahun_terbit:Int
}

class Majalah{
 ~ Volume,Series,Isbn:String
 <<constructor>>Majalah()
}

class DVD{
 ~Isbn,Audio,Tutorial,Multimedia:String
}

class Buku{
 ~Isbn,jumlah_Halaman:String
}

class Peminjam{

}

class MasyarakatUmum{
}

class Dosen{
}

class Mahasiswa{
}


@enduml